[gd_scene format=3 uid="uid://cb1ina4wjdfhv"]

[ext_resource type="Script" uid="uid://5f2lklfgrfjm" path="res://card_maker/deck_menu/single_card_menu/single_card_menu.gd" id="1_ao5vc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yn15"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7yn15"]
font_color = Color(0, 0, 0, 1)

[node name="SingleCardMenu" type="PanelContainer" unique_id=673563017]
offset_right = 145.0
offset_bottom = 57.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7yn15")
script = ExtResource("1_ao5vc")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=324011983]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer" unique_id=1402617669]
layout_mode = 2

[node name="SubTypeMenu" type="HBoxContainer" parent="MarginContainer/MainVBox" unique_id=1245844527]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainVBox/SubTypeMenu" unique_id=350083625]
layout_mode = 2
text = "Sub Type: "
label_settings = SubResource("LabelSettings_7yn15")

[node name="SubTypeOptionButton" type="OptionButton" parent="MarginContainer/MainVBox/SubTypeMenu" unique_id=1754781624]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="NodeVBox" type="VBoxContainer" parent="MarginContainer/MainVBox" unique_id=331470476]
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/MainVBox" unique_id=441205298]
layout_mode = 2
size_flags_horizontal = 0
text = "Delete"

[connection signal="item_selected" from="MarginContainer/MainVBox/SubTypeMenu/SubTypeOptionButton" to="." method="_on_sub_type_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/MainVBox/DeleteButton" to="." method="_on_delete_button_pressed"]
